fix: header.component.html userLang gap to professor fix: footer.component.scss UI mobile view fix: navigator sidebar-collapsed width for bigger content

--- a/src/main/webapp/app/layouts/footer/footer.component.scss
+++ b/src/main/webapp/app/layouts/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@use '../../../content/scss/breakpoints' as bp;
+
 .footer {
   display: flex;
   background-color: var(--p-background-footer);
@@ -49,12 +51,21 @@
 @media (max-width: 600px) {
   .footer {
     font-size: 0.75rem;
-    padding: 0.5rem;
+    padding: 0.75rem 0.5rem;
+    text-align: left;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    width:100%;
   }
 
-  .logo-section,
-  .rights-section,
-  .legal-section {
-    padding: 0 0.5rem;
+  .footer .logo-section,
+  .footer .rights-section,
+  .footer .legal-section{
+    display: flex;
+    padding-left: 0.5rem;
+    width:100%;
   }
+
+
 }
