--- a/src/main/webapp/app/shared/components/atoms/sidebar-button/sidebar-button.component.scss
+++ b/src/main/webapp/app/shared/components/atoms/sidebar-button/sidebar-button.component.scss
@@ -1,3 +1,4 @@
+@use '../../../../../content/scss/breakpoints' as bp;
 .sidebar-button {
   display: flex;
   height: 2.75rem;
@@ -19,6 +20,13 @@
   &.icon-only {
     justify-content: center;
     width: 2.75rem;
+
+    @media (max-width: bp.$lg) {
+      width: 2.25rem;
+      height: 2.25rem;
+      padding: 0.5rem;
+      border-radius: 0.375rem;
+    }
   }
 
   .icon {
